# Aftermath.MsStore

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
src/: config.py  entry.py
src/database/: connection.py
src/settings/: base.py
src/store/accessory/: api.py  models.py  repository.py  schemas.py
src/store/repository/: base.py  error_codes.py  exceptions.py
src/store/utils/: generators.py
tests/: test_accessory_api.py
