[tool.poetry]
name = "ms-store"
version = "0.1.0"
description = "Microservice for EVC Group Store"
authors = ["Mitch Burneo <mitchburneo@aftermath.team>"]
readme = "README.md"
packages = [{include = "store", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.3"
pydantic-settings = "^2.0.2"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
isort = "^5.12.0"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
greenlet = "^2.0.2"
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-p no:warnings --ignore=modules --cov=src"
